# Perfomance-checker

./: .env  Cargo.toml  Dockerfile  ReadMe.md  docker-compose.yml  init.sql
src/: main.rs
