[package]
name = "perfomance-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

